# nesto

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3381e2294dac_add_calendar_sync_tables.py  73c7efc857cf_add_documents_tables.py  7a8eeee9b28c_add_loyalty_cards_table.py  809d2c20b8de_add_shopping_lists_tables.py  a1b2c3d4e5f6_add_indexes.py  abf3d9fccb6b_initial_schema.py  ae401dbf8961_add_user_first_name.py  b2c3d4e5f6a7_add_event_all_day.py  c7e4f2a19b53_add_user_email_digest_preferences.py  d8f3a1b25c47_add_shopping_item_added_by.py  e1f2a3b4c5d6_add_index_on_tasks_due_date.py  e3001a6b3d0b_add_events_table.py  f0ff3dcaedcd_add_unique_constraint_on_external_.py  f5a2c8d91e03_add_task_recurrence_columns.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  calendar_sync.py  document.py  event.py  household.py  loyalty_card.py  shopping_list.py  task.py  user.py
backend/app/routers/: auth.py  calendar_sync.py  documents.py  events.py  households.py  loyalty_cards.py  shopping_lists.py  tasks.py
backend/app/schemas/: calendar_sync.py  document.py  event.py  household.py  loyalty_card.py  shopping_list.py  task.py  user.py
backend/app/services/: calendar_connection_service.py  calendar_sync_service.py  crypto_service.py  digest_service.py  document_service.py  (+8 more)
backend/tests/: test_auth.py  test_calendar_connection_service.py  test_crypto_service.py  test_feed_service.py
(+95 files in other folders)
